Fixed contact form overflow

--- a/src/components/body/contact/contact.css
+++ b/src/components/body/contact/contact.css
@@ -8,8 +8,9 @@
 #contactBox {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
+	flex: 1;
 	gap: 16px;
 }
 
@@ -19,14 +20,11 @@
 
 @media only screen and (max-width: 768px) {
 	#contact {
-		justify-content: center;
-		align-items: center;
+		align-items: stretch;
 	}
 
 	#contactBox {
 		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 	}
 
 }
