--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -18,6 +18,3 @@
 	color: var(--text);
 }
 
-html {
-	scroll-behavior: smooth;
-}
